@@ -1,0 +1,4 @@
+%h4
+  This is WIP merge request
+%p
+  %strong If you want to merge this, please remove "WIP" in labels.
